# gremlin

./: Cargo.toml
libprocmem/: Cargo.toml
libprocmem/src/: lib.rs
rsrc/: mmap.s  thread_clone.s
src/: injector.rs  main.rs
victim/: Cargo.toml
victim/src/: main.rs
