[package]
name = "gremlin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26.2", features = ["ptrace"] }
linux-personality = "1.0.0"
libc = "0.2.139"
#log = "0.4.17"
#pretty_env_logger = "0.4.0"
libprocmem = { path = "./libprocmem" }
clap = { version = "4.4.4", features = ["derive"] }
capstone = "0.11.0"

#sysinfo = "0.26.6"
